--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "react-scroll": "^1.8.8",
-    "web-vitals": "^2.1.4"
+    "react-scroll": "^1.8.8"
   },
   "scripts": {
     "start": "react-scripts start",
